@@ -1,5 +1,8 @@
 package hexlet.code.controllers;
 
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.sql.SQLException;
 import java.sql.Timestamp;
 
@@ -13,55 +16,44 @@ import hexlet.code.repository.UrlCheckRepository;
 import hexlet.code.repository.UrlRepository;
 import hexlet.code.util.NamedRoutes;
 
+import hexlet.code.utils.HtmlParser;
 import io.javalin.http.Context;
 import io.javalin.http.NotFoundResponse;
 
-import kong.unirest.Unirest;
-import kong.unirest.HttpResponse;
-import org.jsoup.Jsoup;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
-
-import java.net.URL;
+import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static hexlet.code.utils.UrlBuild.urlBuild;
+
 public  class UrlController {
     public static void addUrl(Context ctx) throws SQLException {
-
         try {
-            var inputUrl = ctx.formParamAsClass("url", String.class)
-                    .check(value -> !value.isEmpty(), "Заполните это поле")
-                    .get();
+            var name = ctx.formParamAsClass("url", String.class)
+                    .get()
+                    .toLowerCase()
+                    .trim();
 
-            URL parsedUrl = new URL(inputUrl);
+            var urlToValidate = new URI(name);
+            String normalizeUrl = urlBuild(urlToValidate.toURL());
+            Timestamp createdAt = new Timestamp(System.currentTimeMillis());
+            var url = new Url(normalizeUrl, createdAt);
 
-            var port = "";
-            var portNumber = parsedUrl.getPort();
-            if (portNumber != -1) {
-                port = ":" + portNumber;
-            }
-
-            var normalizedUrl = parsedUrl.getProtocol() + "://" + parsedUrl.getHost() + port;
-
-            if (UrlRepository.existsByName(normalizedUrl)) {
+            if (!UrlRepository.existsByName(normalizeUrl)) {
                 ctx.status(409);
-                ctx.sessionAttribute("flash", "Страница уже существует");
+                UrlRepository.save(url);
+                ctx.sessionAttribute("flash", "Сайт успешно добавлен");
+                ctx.sessionAttribute("flash-type", "success");
+                ctx.redirect(NamedRoutes.urlsPath());
+            } else {
+                ctx.status(400);
+                ctx.sessionAttribute("flash", "Сайт уже добавлен");
                 ctx.sessionAttribute("flash-type", "info");
                 ctx.redirect(NamedRoutes.urlsPath());
             }
+        } catch (MalformedURLException | URISyntaxException e) {
 
-            Timestamp createdAt = new Timestamp(System.currentTimeMillis());
-            Url url = new Url(normalizedUrl, createdAt);
-            UrlRepository.save(url);
-
-            ctx.sessionAttribute("flash", "Страница успешно добавлена");
-            ctx.sessionAttribute("flash-type", "success");
-            ctx.redirect(NamedRoutes.urlsPath());
-
-        } catch (Exception e) {
-            ctx.status(400);
             ctx.sessionAttribute("flash", "Некорректный URL");
             ctx.sessionAttribute("flash-type", "danger");
             ctx.redirect(NamedRoutes.rootPath());
@@ -106,40 +98,30 @@ public  class UrlController {
     }
 
     public static void checkUrl(Context ctx) throws SQLException {
-        var urlId = ctx.pathParamAsClass("id", Long.class).get();
-        var url = UrlRepository.find(urlId)
+        long id = ctx.pathParamAsClass("id", Long.class).get();
+        var url = UrlRepository.find(id)
                 .orElseThrow(() -> new NotFoundResponse("Url not found"));
 
-        HttpResponse<String> response = Unirest.get(url.getName()).asString();
+        try {
+            var parsedHtml = new HtmlParser(url.getName());
 
-        var statusCode = response.getStatus();
-        Document doc = Jsoup.parse(response.getBody());
+            int status = parsedHtml.getCode();
+            String h1 = parsedHtml.getH1();
+            String description = parsedHtml.getDescription();
+            String title = parsedHtml.getTitle();
+            Timestamp createdAt = Timestamp.valueOf(LocalDateTime.now());
 
-        String title = "";
-        if (doc.title() != null) {
-            title = doc.title();
+            var urlToCheck = new UrlCheck(status, title, h1, description, id, createdAt);
+            UrlCheckRepository.save(urlToCheck);
+
+            ctx.sessionAttribute("flash", "Проверка сайта успешно проведена");
+            ctx.sessionAttribute("flash-type", "success");
+
+            ctx.redirect(NamedRoutes.urlPath(id));
+        } catch (Exception e) {
+            ctx.sessionAttribute("flash", "Некорректный адрес");
+            ctx.sessionAttribute("flash-type", "danger");
+            ctx.redirect(NamedRoutes.urlPath(id));
         }
-
-
-        String h1 = "";
-        Element h1Element = doc.selectFirst("h1");
-        if (h1Element != null) {
-            h1 = h1Element.text();
-        }
-
-        String description = "";
-        Element descElement = doc.selectFirst("meta[name=description]");
-        if (descElement != null) {
-            description = descElement.attr("content");
-        }
-
-        Timestamp createdAt = new Timestamp(System.currentTimeMillis());
-
-        var urlCheck = new UrlCheck(statusCode, title, h1, description, urlId, createdAt);
-        UrlCheckRepository.save(urlCheck);
-
-        ctx.sessionAttribute("flash", "Страница успешно проверена");
-        ctx.sessionAttribute("flash-type", "success");
-        ctx.redirect(NamedRoutes.urlPath(urlId));
     }
 }
